--- a/production/templates/nginx/default.conf
+++ b/production/templates/nginx/default.conf
@@ -3,7 +3,11 @@ server {
   listen [::]:80 default_server;
 
   # Redirect all traffic to HTTPS.
+  {% if proxy_host_https_port == 443 -%}
   return 307 https://$host$request_uri;
+  {% else -%}
+  return 307 https://$host:{{proxy_host_https_port}}$request_uri;
+  {% endif %}
 }
 
 server {
