--- a/production/templates/docker-compose.yml
+++ b/production/templates/docker-compose.yml
@@ -49,6 +49,38 @@ services:
     networks:
       concertim-net: {}
 
+  api_server:
+    image: concertim-api-server
+    expose:
+      - 42356
+    ports:
+      - "{{api_server_host_interface}}:{{api_server_host_port}}:42356"
+    volumes:
+      - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
+      - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
+      - "{{ct_openstack_service_data_dir}}:/app/var/data/"
+
+  bulk_updates:
+    image: concertim-bulk-updates
+    volumes:
+      - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
+      - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
+      - "{{ct_openstack_service_data_dir}}:/app/var/data/"
+
+  mq_listener:
+    image: concertim-mq-listener
+    volumes:
+      - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
+      - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
+      - "{{ct_openstack_service_data_dir}}:/app/var/data/"
+
+  metrics:
+    image: concertim-metrics
+    volumes:
+      - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
+      - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
+      - "{{ct_openstack_service_data_dir}}:/app/var/data/"
+
   proxy:
     image: concertim-proxy
     ports:
