--- a/production/playbook.yml
+++ b/production/playbook.yml
@@ -1,9 +1,12 @@
 ---
-- name: Install Alces Concertim components as docker containers
+- name: Install and build Alces Concertim components as docker containers
   hosts: all
   become: true
   become_user: root
   become_method: sudo
+
+  vars:
+    ct_action: deploy
 
   pre_tasks:
     - name: Assert credentials are present
@@ -53,227 +56,61 @@
           group: root
           mode: "700"
 
+  roles:
+    - role: concertim_common
+      tags: concertim
+      when: enable_concertim | bool
+
+    - role: db
+      tags: concertim
+      when: enable_concertim | bool
+
+    - role: proxy
+      tags: concertim
+      when: enable_concertim | bool
+
+    - role: metric_reporting_daemon
+      tags: concertim
+      when: enable_concertim | bool
+
+    - role: visualisation_app
+      tags: concertim
+      when: enable_concertim | bool
+
+    - role: cluster_builder
+      tags: cluster_builder
+      when: enable_cluster_builder | bool
+
+    - role: openstack_service
+      tags: openstack_service
+      when: enable_openstack_service | bool
+
   tasks:
-    - name: Checkout source directories
-      ansible.builtin.git:
-        repo: https://{{gh_token}}@github.com/alces-flight/{{item.repo}}.git
-        dest: "{{ct_installation_dir}}/{{item.dest}}"
-        single_branch: yes
-        version: "{{item.commitish}}"
-      environment:
-        GIT_TERMINAL_PROMPT: 0
-      loop:
-        - repo: concertim-metric-reporting-daemon
-          dest: metric-reporting-daemon
-          commitish: exp/dockerfile
-        - repo: concertim-ct-visualisation-app
-          dest: visualisation-app
-          commitish: chore/dockerfile
-        - repo: concertim-cluster-builder
-          dest: cluster-builder
-          commitish: main
-        - repo: concertim-openstack-service
-          dest: openstack-service
-          commitish: master
-
-    # We need the following as the directory is owned by root, but not all git
-    # commands are executed as root.
-    # XXX Can we remove this somehow?
-    - name: Workaround git and dubious ownership issues
-      ansible.builtin.command:
-        cmd: git config --global --add safe.directory "{{ct_installation_dir}}/{{item}}"
-      loop:
-        - metric-reporting-daemon
-        - visualisation-app
-        - cluster-builder
-        - openstack-service
-
     - name: Install docker compose file
       ansible.builtin.template:
         src: docker-compose.yml
         dest: "{{ct_docker_dir}}/"
 
-    - name: Copy additional docker compose configuration
-      ansible.builtin.copy:
-        src: db
-        dest: "{{ct_docker_dir}}"
+# Run any tasks that need to run after all of the containers and the docker
+# compose configuration is in place.  E.g., migrating databases.
+- name: Post-install configuration of Alces Concertim components
+  hosts: all
+  become: true
+  become_user: root
+  become_method: sudo
+  vars:
+    ct_action: post-deploy
+  roles:
+    - role: visualisation_app
+      tags: concertim
+      when: enable_concertim | bool
 
-    - name: Ensure docker secrets exist
-      ansible.builtin.set_fact:
-        db_password: "{{ lookup('password', '{{ct_docker_dir}}/secrets/db-password chars=ascii_letters,digits length=32') }}"
-        jwt_secret: "{{ lookup('password', '{{ct_docker_dir}}/secrets/jwt-secret chars=ascii_letters,digits length=32') }}"
-        rails_master_key: "{{ lookup('password', '{{ct_docker_dir}}/secrets/rails-master-key chars=ascii_letters,digits length=32') }}"
-
-    - name: Create secrets env file
-      ansible.builtin.template:
-        src: secrets.env
-        dest: "{{ct_docker_dir}}/secrets"
-        owner: root
-        group: root
-        mode: '0600'
-
-    - name: Copy cluster type definitions
-      vars:
-        available_dir: "{{ct_cluster_builder_share_dir}}/cluster-types-available"
-        enabled_dir: "{{ct_cluster_builder_share_dir}}/cluster-types-enabled"
-        hot_dir: "{{ct_cluster_builder_share_dir}}/hot"
-      block:
-        - name: Create cluster type definition directories
-          ansible.builtin.file:
-            path: "{{item}}"
-            owner: root
-            group: root
-            mode: "755"
-            state: directory
-          loop:
-            - "{{available_dir}}"
-            - "{{enabled_dir}}"
-            - "{{hot_dir}}"
-        - name: Copy examples cluster type definitions
-          ansible.builtin.copy:
-            src: "{{ct_installation_dir}}/cluster-builder/examples/{{item.src}}"
-            remote_src: true
-            dest: "{{item.dest}}"
-          loop:
-            - src: cluster-types/
-              dest: "{{available_dir}}"
-            - src: hot/
-              dest: "{{hot_dir}}"
-        - name: Enable all available types
-          ansible.builtin.file:
-            src: "../cluster-types-available/{{item | basename}}"
-            dest: "{{enabled_dir}}/{{item | basename}}"
-            state: link
-          loop: "{{ query('fileglob', available_dir+'/*.yaml') }}"
-
-    - name: Create concertim openstack service directories
-      ansible.builtin.file:
-        path: "{{ item.path }}"
-        owner: "{{ item.owner }}"
-        group: "{{ item.group }}"
-        mode: "{{ item.mode }}"
-        state: directory
-      loop:
-        - path: "{{ct_etc_dir}}/openstack-service/"
-          owner: root
-          group: root
-          mode: "755"
-        - path: "{{ct_log_dir}}/openstack-service/"
-          owner: root
-          group: root
-          mode: "755"
-        - path: "{{ct_openstack_service_data_dir}}"
-          owner: root
-          group: root
-          mode: "755"
-
-    - name: Copy openstack service config files
-      ansible.builtin.copy:
-        src: "{{ct_installation_dir}}/openstack-service/etc/config-sample.yaml"
-        remote_src: true
-        dest: "{{ct_etc_dir}}/openstack-service/config.yaml"
-
-    - name: Make proxy installation directories
-      ansible.builtin.file:
-        path: "{{ct_installation_dir}}/proxy/nginx/conf.d"
-        owner: root
-        group: root
-        mode: "755"
-        state: directory
-
-    - name: Install nginx reverse proxy configuration
-      ansible.builtin.template:
-        src: nginx/default.conf
-        dest: "{{ct_installation_dir}}/proxy/nginx/conf.d/default.conf"
-
-    - name: Install nginx reverse proxy configuration
-      ansible.builtin.copy:
-        src: nginx
-        dest: "{{ct_installation_dir}}/proxy/"
-
-    - name: Install nginx reverse proxy Dockerfile
-      ansible.builtin.template:
-        src: nginx/Dockerfile
-        dest: "{{ct_installation_dir}}/proxy/"
-
-    - name: Build docker images
-      community.docker.docker_image:
-        name: "{{item.name}}"
-        build:
-          path: "{{ct_installation_dir}}/{{item.dir}}"
-          dockerfile: "{{item.dockerfile | default('Dockerfile')}}"
-          args: "{{item.args}}"
-          network: host
-          # http_timeout: 60
-        source: build
-      loop:
-        - name: concertim-metric-reporting-daemon
-          dir: metric-reporting-daemon
-          args: {}
-        - name: concertim-visualisation-app
-          dir: visualisation-app
-          args:
-            temp_jwt_secret: not_used_just_has_to_present
-        - name: concertim-cluster-builder
-          dir: cluster-builder
-          args: {}
-        - name: concertim-proxy
-          dir: proxy
-          args: {}
-        - name: concertim-api-server
-          dir: openstack-service
-          dockerfile: ./Dockerfiles/Dockerfile.api_server
-          args: {}
-        - name: concertim-bulk-updates
-          dir: openstack-service
-          dockerfile: ./Dockerfiles/Dockerfile.updates_bulk
-          args: {}
-        - name: concertim-mq-listener
-          dir: openstack-service
-          dockerfile: ./Dockerfiles/Dockerfile.updates_mq
-          args: {}
-        - name: concertim-metrics
-          dir: openstack-service
-          dockerfile: ./Dockerfiles/Dockerfile.metrics
-          args: {}
-
-    - name: Create visualisation credentials
-      block:
-        - name: Check for existing credentials
-          ansible.builtin.stat:
-            path: "{{credentials_path}}"
-          register: credentials_file
-        - name: Create credentials
-          when: not credentials_file.stat.exists
-          vars:
-            # Make sure to escape any single quote chars here.
-            script: |
-              set -e
-              set -o pipefail
-              EDITOR=cat ./bin/rails credentials:edit
-              cp -a config/credentials.yml.enc {{credentials_path}}
-              ./bin/rake encryption:generate --trace
-              mv config/credentials.yml.enc {{credentials_path}}
-          ansible.builtin.shell:
-            chdir: "{{ct_docker_dir}}"
-            cmd: |
-              docker compose run --rm visualisation /bin/bash -c '{{script}}'
-
-    - name: Precompile visualisation assets
-      ansible.builtin.shell:
-        chdir: "{{ct_docker_dir}}"
-        cmd: |
-          docker compose run --rm visualisation bin/rails assets:precompile --trace
-
-    - name: Create and migrate visualisation app database
-      ansible.builtin.shell:
-        chdir: "{{ct_docker_dir}}"
-        cmd: |
-          docker compose up --detach db
-          docker compose run --rm visualisation bin/rails db:create --trace
-          docker compose run --rm visualisation bin/rails db:migrate --trace
-          docker compose stop
-
+- name: Start Alces Concertim components
+  hosts: all
+  become: true
+  become_user: root
+  become_method: sudo
+  tasks:
     - name: Start services
       ansible.builtin.shell:
         chdir: "{{ct_docker_dir}}"
