--- a/production/roles/metric_reporting_daemon/tasks/main.yaml
+++ b/production/roles/metric_reporting_daemon/tasks/main.yaml
@@ -15,6 +15,24 @@
   ansible.builtin.command:
     cmd: git config --global --add safe.directory "{{metric_reporting_daemon.install_dir}}"
 
+- name: Create configuration directory
+  ansible.builtin.file:
+    path: "{{ct_etc_dir}}/metric-reporting-daemon"
+    owner: root
+    group: root
+    mode: "755"
+    state: directory
+
+- name: Install metric reporting daemon configuration file
+  ansible.builtin.template:
+    src: config.yml
+    dest: "{{ct_etc_dir}}/metric-reporting-daemon/"
+
+- name: Install gmetad configuration file
+  ansible.builtin.template:
+    src: gmetad.conf
+    dest: "{{ct_etc_dir}}/metric-reporting-daemon/"
+
 - name: Build docker image
   community.docker.docker_image:
     name: "{{metric_reporting_daemon.docker_image.name}}"
