--- a/production/roles/proxy/templates/default.conf
+++ b/production/roles/proxy/templates/default.conf
@@ -1,3 +1,4 @@
+{% if proxy_host_http_port -%}
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
@@ -9,9 +10,10 @@ server {
   return 307 https://$host:{{proxy_host_https_port}}$request_uri;
   {% endif %}
 }
+{% endif %}
 
 server {
-  listen 443 ssl default;
+  listen {{proxy_host_https_port}} ssl default;
 
   client_max_body_size 0;
   # add Strict-Transport-Security to prevent man in the middle attacks
@@ -36,7 +38,7 @@ server {
   }
 
   location ^~ /mrd/ {
-	  proxy_pass http://{{metrics_host}}:3000/;
+	  proxy_pass http://{{metric_reporting_daemon_hostname}}:{{metric_reporting_daemon_api_host_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
@@ -45,7 +47,7 @@ server {
   # ct-visualisation-app.  If a request should be handled differently, that
   # handling needs to be defined before this.
   location ^~ / {
-	  proxy_pass http://{{visualisation_host}}:7000/;
+	  proxy_pass http://{{visualisation_app_hostname}}:{{visualisation_app_host_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
