--- a/production/roles/proxy/templates/default.conf
+++ b/production/roles/proxy/templates/default.conf
@@ -1,19 +1,19 @@
-{% if proxy_host_http_port -%}
+{% if proxy_http_port -%}
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
   # Redirect all traffic to HTTPS.
-  {% if proxy_host_https_port == 443 -%}
+  {% if proxy_https_port == 443 -%}
   return 307 https://$host$request_uri;
   {% else -%}
-  return 307 https://$host:{{proxy_host_https_port}}$request_uri;
+  return 307 https://$host:{{proxy_https_port}}$request_uri;
   {% endif %}
 }
 {% endif %}
 
 server {
-  listen {{proxy_host_https_port}} ssl default;
+  listen {{proxy_https_port}} ssl default;
 
   client_max_body_size 0;
   # add Strict-Transport-Security to prevent man in the middle attacks
@@ -38,7 +38,7 @@ server {
   }
 
   location ^~ /mrd/ {
-	  proxy_pass http://{{metric_reporting_daemon_hostname}}:{{metric_reporting_daemon_api_host_port}}/;
+	  proxy_pass http://{{metric_reporting_daemon_hostname}}:{{metric_reporting_daemon_api_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
@@ -47,7 +47,7 @@ server {
   # ct-visualisation-app.  If a request should be handled differently, that
   # handling needs to be defined before this.
   location ^~ / {
-	  proxy_pass http://{{visualisation_app_hostname}}:{{visualisation_app_host_port}}/;
+	  proxy_pass http://{{visualisation_app_hostname}}:{{visualisation_app_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
