--- a/production/roles/db/tasks/main.yaml
+++ b/production/roles/db/tasks/main.yaml
@@ -1,4 +1,4 @@
-- name: Copy additional docker compose configuration
+- name: Copy init-database.sh
   ansible.builtin.copy:
     src: init-database.sh
     dest: "{{ct_docker_dir}}/db/"
